--- a/style.css
+++ b/style.css
@@ -7,14 +7,12 @@ html,body,*{
 body{
     width: 80%;
     margin: 0 auto;
-    background-color: #262424;
+    background-color: #302e2e;
     height: 100vh;
     font-family: Helvetica;
 }
 
 header{
-    /* max-width: 80%;
-    margin:0 auto; */
     background-color: #000;
     padding: 20px 10px;
     overflow: hidden;
@@ -30,16 +28,30 @@ header nav{
     border-bottom: 1px solid #fff;
     padding-bottom: .5rem;  
 }
-header a{
+a{
     color: rgb(255, 123, 123);
     text-decoration: none;
    
 }
-header nav .nav1{
-    display: flex;
+header nav .ma-nav{
+    display: none;
     gap: 1.5rem;
     padding-right: 2rem;
 }
+@media (min-width: 768px){
+    header nav .ma-nav{
+                    display: flex;
+    }
+    .fa-solid{
+        display: none;}
+}
+
+.fa-solid{
+    font-size: 4rem;
+    color: rgb(255, 123, 123);
+    
+}
+
 
 header a::before{
     content: '|';
@@ -52,7 +64,7 @@ a:hover{
 .logo{
     padding-left: 1.5rem;
     font-size: 2rem;
-    padding: 10px 0 10px 1.5rem;
+    padding: 1rem 0 1rem 1.5rem;
 }
 .wegw{
     font-size: 1.25rem;
@@ -164,41 +176,88 @@ button:hover{
     margin-bottom: 2rem;
     gap: 2rem;
 } */
-
-@media (min-width: 768px){
-    .ma-cards{
-        /* display: flex; */
-        /* flex-direction: row;
-        flex-wrap: wrap; */
-    }
-    /* .ma-cards-items{
-        width: 30%;
-    } */
+.einführung{
+    padding-top: 1rem ; 
+    margin-top: 1rem;
+    background-color: #00000016;
+    display: flex;
+    flex-direction: column;
 }
-
+.einführung h1{
+    background-color: #000;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 10rem;
+    font-size: 4rem;
+    box-shadow: 0 0 20px #1d77fd;
+    margin: 1rem 0;
+}
 .ma-cards-items{
     background-color: #000;
     color: #fff;
     border-radius: 5px;
     padding: 2rem 2rem;
-    width: 100%;
+    /* width: 100%; */
     margin: 2rem 0;
-    box-shadow: 0 0 10px rgba(251, 41, 41, 0.2348);
+    box-shadow: 0 0 30px rgba(251, 41, 41, 0.2348);
     font-size: 1.5rem;
     text-align: center;
 
 }
+.ma-bottom-nav{
+    font-size: 1.5rem;
+    background-color: #3d8eff;
+    color: #fff;
+    padding: 20px 10px;
+    /* margin: 2rem; */
+    width: 6rem;
+    height: 6rem;
+    border-radius: 50%;
+    position: fixed;
+    bottom: 2rem;
+    left: 2.5%;
+    z-index: 1000;
+    box-shadow: 0 0 20px #f31212;
+}
+
+.ma-menu-button{
+    display: none;
+    position: relative;
+    bottom: 17rem;
+    width: 12rem;
+    border-radius: 5px;
+
+}
+.ma-menu-button ul li{
+    list-style: none;
+    padding: 1rem ;
+    font-size: 1.5rem;
+}
+.ma-bottom-nav:hover .ma-menu-button {
+    display: block;
+    background: #f5f5f5;
+    box-shadow: 5px 5px 10px #d5d5d5;
+    z-index: 1000;
+    cursor: pointer;
+    transition: 3s;
+  }
+
 .ma-cards-items h2{
     letter-spacing: .5rem;
-    line-height: 4rem;
+    line-height: 3rem;
     margin-bottom: 1rem;
     color: rgb(255, 123, 123);
+    font-size: 1.5rem;
 }
 .ma-cards-items .fontsize{
     font-size: 1rem;
 }
-.ma-cards-items p{
+.ma-cards-items p, .course-item p{
     margin: 1.5rem ;
+    text-align: justify;
+    word-break: break-all;
     
 }
 
@@ -216,9 +275,93 @@ button:hover{
 .internetliste li a{
     color: #1d77fd;
 }
+.course-item p a{
+    color: #1d77fd;
+    font-size: 1.7rem;
+    text-decoration:dotted;
+}
 summary{
-    font-size: 2.2rem;
-    color: rgba(251, 41, 41, 0.348);
+    font-size: 2rem;
+    color: #1d77fd94;
     cursor: pointer;
     
+}
+
+
+
+.course-item{
+    background-color: #000;
+    color: #fff;
+    border-radius: 5px;
+    padding: 2rem 2rem;
+    width: 100%;
+    margin: 2rem 0;
+    box-shadow: 0 0 30px rgba(251, 41, 41, 0.2348);
+    font-size: 1.5rem;
+    text-align: center;
+}
+.ma-cards-items:hover, .course-item:hover{
+    box-shadow: 4px 4px 30px #1d77fd;
+    transform: scale(1.1);
+    transition: all .3s ease-in-out;
+    /* translate: 1.5rem 1.5rem; */
+}
+.course-item h3{
+    letter-spacing: .5rem;
+    line-height: 4rem;
+    margin-bottom: 1rem;
+    color: rgb(255, 123, 123);
+}
+.frontend-course, .backend-course, .fullstack-course{
+    background-color: #00000016;
+    padding: 0rem 0;
+    border: 1px solid #00000039;
+}
+
+.frontendkurs, .backendkurs, .fullstackkurs{
+    line-height: 2.5rem;
+    background-color: #000;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 10rem;
+    font-size: 2rem;
+    box-shadow: 0 0 10px #1d77fd;
+   
+
+}
+
+@media (min-width: 922px){
+    .ma-cards{
+        display: flex;
+        flex-wrap: wrap;
+        gap: 2rem;
+        justify-content: center;  
+        margin: 1rem 0;
+    }
+    .ma-cards-items{
+        width: 30rem;
+        margin: 0;
+        
+    }
+    .einführung, .frontend-course, .backend-course, .fullstack-course{
+        min-height: 100%;
+    }
+    .frontend-course-items, .backend-course-items, .fullstack-course-items{
+        display: flex;
+        flex-wrap: wrap;
+        gap: 2rem;
+        justify-content: center;
+        margin: 1rem 0;
+    }
+    .course-item{
+        width: 30rem;
+        margin: 0;
+    }
+    .ma-bottom-nav{
+        left: 8vw;
+    }
+   
+
 }
