--- a/style.css
+++ b/style.css
@@ -2,16 +2,14 @@ html,body,*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior:smooth;
 }
 :root{font-size: 62.5%;}
 body{
-    width: 80%;
-    margin: 0 auto;
     background-color: #302e2e;
     height: 100vh;
     font-family: Helvetica;
 }
-
 header{
     background-color: #000;
     padding: 20px 10px;
@@ -66,7 +64,7 @@ a:hover{
     font-size: 2rem;
     padding: 1rem 0 1rem 1.5rem;
 }
-.wegw{
+.ma-logo{
     font-size: 1.25rem;
     position: relative;
     left:3rem;
@@ -87,9 +85,7 @@ main{
     object-fit:contain;
     background-size: 100% 100%;
     
-    
-    
-    
+   
 }
 .text{
     display: inline-block;
@@ -100,13 +96,13 @@ main{
     overflow: hidden;
 }
 main h1{
-    font-size: 6rem;
+    font-size: 3rem;
     width: 100%;
     text-align: center;
     overflow: hidden;
     line-height: 15rem;
     animation: animate 10s 1;
-    letter-spacing: 1rem;
+    letter-spacing: .7rem;
     text-shadow: 3px 3px 6px #0c4765;
     color: #f5b6b677;
 
@@ -119,14 +115,11 @@ main h1{
 }
 
 
-
-
 footer{
-    /* width: 80%;
-    margin:0 auto; */
+    display: flex;
+    justify-content: space-between;
     background-color: #000;
-    padding: 28px 10px;
-    overflow: hidden;
+    padding: 28px 60px;
     font-size: 1.8rem;
     text-align: center;
     border-bottom: 10px solid #fff;
@@ -177,29 +170,29 @@ button:hover{
     gap: 2rem;
 } */
 .einführung{
-    padding-top: 1rem ; 
-    margin-top: 1rem;
+    /* padding-top: 1rem ; 
+    margin-top: 1rem; */
     background-color: #00000016;
     display: flex;
     flex-direction: column;
 }
 .einführung h1{
-    background-color: #000;
+    background-color: #070b24;
     color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 10rem;
-    font-size: 4rem;
+    font-size: 3rem;
     box-shadow: 0 0 20px #1d77fd;
     margin: 1rem 0;
 }
 .ma-cards-items{
-    background-color: #000;
+    background-color: #3534346f;
     color: #fff;
     border-radius: 5px;
     padding: 2rem 2rem;
-    /* width: 100%; */
+    width: 100%;
     margin: 2rem 0;
     box-shadow: 0 0 30px rgba(251, 41, 41, 0.2348);
     font-size: 1.5rem;
@@ -225,7 +218,7 @@ button:hover{
 .ma-menu-button{
     display: none;
     position: relative;
-    bottom: 17rem;
+    bottom: 20rem;
     width: 12rem;
     border-radius: 5px;
 
@@ -255,9 +248,13 @@ button:hover{
     font-size: 1rem;
 }
 .ma-cards-items p, .course-item p{
+    color: #c5c1c1;
     margin: 1.5rem ;
     text-align: justify;
     word-break: break-all;
+    /* word-spacing: .2rem; */
+    font-size: 1.5rem;
+    line-height: 2rem;
     
 }
 
@@ -276,9 +273,9 @@ button:hover{
     color: #1d77fd;
 }
 .course-item p a{
-    color: #1d77fd;
+    color: #1d77fd94;
     font-size: 1.7rem;
-    text-decoration:dotted;
+    text-decoration:underline;
 }
 summary{
     font-size: 2rem;
@@ -290,8 +287,7 @@ summary{
 
 
 .course-item{
-    background-color: #000;
-    color: #fff;
+    color: #c5c1c1;
     border-radius: 5px;
     padding: 2rem 2rem;
     width: 100%;
@@ -302,7 +298,8 @@ summary{
 }
 .ma-cards-items:hover, .course-item:hover{
     box-shadow: 4px 4px 30px #1d77fd;
-    transform: scale(1.1);
+    background-color: #353434ce;
+    transform: scale(1.07);
     transition: all .3s ease-in-out;
     /* translate: 1.5rem 1.5rem; */
 }
@@ -320,7 +317,7 @@ summary{
 
 .frontendkurs, .backendkurs, .fullstackkurs{
     line-height: 2.5rem;
-    background-color: #000;
+    background-color: #070b24;
     color: #fff;
     display: flex;
     justify-content: center;
@@ -328,11 +325,47 @@ summary{
     height: 10rem;
     font-size: 2rem;
     box-shadow: 0 0 10px #1d77fd;
-   
-
 }
+.frontendkurs a{ color: #fff;}
+header, main, .einführung, .frontend-course, .backend-course, .fullstack-course, footer{
+    width: 98%;
+    margin: 0 auto;
+    border-right:1px solid #fff;
+    border-left:.1px solid #fff;
+}
+/* .einführung, .frontend-course, .backend-course, .fullstack-course{
+    background-image:radial-gradient(circle, rgb(0, 0, 0, 1), rgba(0, 0, 0, 0.51452), rgba(0, 0, 0, .71), rgba(251, 41, 41, 0.1348)), url(Bilder/hintergrund.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    object-fit:contain;
+    background-size: 100% 100%;
+} */
 
 @media (min-width: 922px){
+    body{width: 80%;
+         margin: 0 auto;}
+    
+    .text{
+            display: inline-block;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+            overflow: hidden;
+        }
+     main h1{
+            font-size: 6rem;
+            width: 100%;
+            text-align: center;
+            overflow: hidden;
+            line-height: 15rem;
+            animation: animate 10s 1;
+            letter-spacing: 1rem;
+            text-shadow: 3px 3px 6px #0c4765;
+            color: #f5b6b677;
+        
+        }
     .ma-cards{
         display: flex;
         flex-wrap: wrap;
@@ -362,6 +395,7 @@ summary{
     .ma-bottom-nav{
         left: 8vw;
     }
+}
    
 
-}
+
