--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ button:hover{
     border-radius: 50%;
     position: fixed;
     bottom: 2rem;
-    left: 2.5%;
+    left: 2.9%;
     z-index: 1000;
     box-shadow: 0 0 20px #f31212;
 }
@@ -393,7 +393,8 @@ header, main, .einführung, .frontend-course, .backend-course, .fullstack-course
         margin: 0;
     }
     .ma-bottom-nav{
-        left: 8vw;
+        left: 9vw;
+        bottom: 3rem;
     }
 }
    
